--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -32,6 +32,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:text="@string/user"
+                 android:padding="@dimen/_2ssp"
                 android:textColor="@color/black"
                 android:layout_marginLeft="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_5sdp"
@@ -40,8 +41,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <LinearLayout
+                <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    app:cardCornerRadius="@dimen/_5sdp"
                     android:layout_height="wrap_content"
                     android:gravity="center">
                 <androidx.appcompat.widget.AppCompatButton
@@ -53,10 +56,9 @@
                     android:textAllCaps="false"
                     android:background="@color/white"
                     android:visibility="visible"
-                    android:layout_marginLeft="10dp"
                     android:text="Select Farm"
                     android:drawableRight="@drawable/baseline_keyboard_arrow_down_24_green" />
-                </LinearLayout>
+                </androidx.cardview.widget.CardView>
                 </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
@@ -75,7 +77,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:weightSum="3"
-                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:orientation="horizontal"
                 android:layout_height="wrap_content">
                 <androidx.cardview.widget.CardView
